@@ -1,0 +1,13 @@
+--- #YAML:1.0
+name: Imager
+version: 0.44
+version_from: Imager.pm
+author: Tony Cook <tony@imager.perl.org>, Arnar M. Hrafnkelsson
+abstract: Perl extension for Generating 24 bit Images
+installdirs: site
+recommends:
+  Parse::RecDescent: 0
+license: perl
+dynamic_config: 1
+distribution_type: module
+generated_by: Imager version 0.44
